# Course_Service

./: .env  README.md  main.py  pyproject.toml
courses/: course_router.py  shemas.py
database/: config.py  database.py
lessons/: lessons_router.py
models/: CourseModel.py  LessonModel.py  UserModel.py
src/: crud.py  main.py
src/courses/: course_router.py
src/database/: database.py
src/models/: CourseEnum.py  CourseModel.py  LessonModel.py  UserModel.py
src/shemas/: course_shema.py  lesson_shema.py
